--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Cinema</title>
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body style="font-family: Arial">
         <h1>Cinema</h1>
@@ -11,3 +11,4 @@
         <p><a href="./ESTADOS/sp.html" class="seagreen">São Paulo</p>
     </body>
 </html>
+<!--projeto simples apenas em HTML com objetivo de aprender a linkar páginas-->
