--- a/ESTADOS/sp.html
+++ b/ESTADOS/sp.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Cinema</title>
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body style="font-family: Arial">
         <a href="/index.html">Início</a>
